--- a/InterfaCSSStatusBarBlurryTableViewController/MainStoryboard.storyboard
+++ b/InterfaCSSStatusBarBlurryTableViewController/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="hC1-0U-2EG">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="nBR-W7-aRn">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -14,7 +14,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="IKJChatRoomTableViewCell" rowHeight="71" id="w2y-l3-MCA" customClass="IKJChatRoomTableViewCell">
-                                <rect key="frame" x="0.0" y="22" width="320" height="71"/>
+                                <rect key="frame" x="0.0" y="86" width="320" height="71"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="w2y-l3-MCA" id="Lnm-9A-EYI">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
@@ -36,10 +36,29 @@
                             <outlet property="delegate" destination="hC1-0U-2EG" id="py5-8K-iXa"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="i71-YX-Bbf"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AGd-ie-2Ix" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="8" y="-94"/>
+            <point key="canvasLocation" x="162" y="-118"/>
+        </scene>
+        <!--Chat View Controller-->
+        <scene sceneID="L12-Nt-XNc">
+            <objects>
+                <viewController storyboardIdentifier="IKJChatViewController" id="gIr-qo-B32" customClass="IKJChatViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="RBk-6c-J6j"/>
+                        <viewControllerLayoutGuide type="bottom" id="Ojt-Nv-RkP"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="0ca-bQ-zsY">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jg8-R2-W6T" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="566" y="-128"/>
         </scene>
         <!--Settings View Controller-->
         <scene sceneID="Pp0-i7-oBN">
@@ -57,7 +76,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bPx-6I-Z2Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="367" y="-164"/>
+            <point key="canvasLocation" x="-171" y="576"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="aEh-oi-1Ev">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nBR-W7-aRn" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="G6q-K4-1qD">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="hC1-0U-2EG" kind="relationship" relationship="rootViewController" id="rVp-8Z-rKt"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uEb-M4-cFD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-364" y="-118"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
