--- a/InterfaCSSStatusBarBlurryTableViewController/MainStoryboard.storyboard
+++ b/InterfaCSSStatusBarBlurryTableViewController/MainStoryboard.storyboard
@@ -4,6 +4,21 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="VRu-1e-1te">
+            <objects>
+                <navigationController definesPresentationContext="YES" id="jLu-BW-2Z6" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="IlA-ch-95E">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="hC1-0U-2EG" kind="relationship" relationship="rootViewController" id="Jh5-tU-k4a"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1P1-Df-LN3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-444" y="-109"/>
+        </scene>
         <!--Chat Room View Controller-->
         <scene sceneID="A1f-Ym-en6">
             <objects>
@@ -134,7 +149,7 @@
                         <outlet property="imageView" destination="NPr-Js-YME" id="gPk-cg-ivo"/>
                         <outlet property="nameTextField" destination="o63-xQ-009" id="uz0-TX-0fo"/>
                         <outlet property="startButton" destination="AzB-qk-bXN" id="wkl-ha-ytY"/>
-                        <segue destination="hC1-0U-2EG" kind="push" identifier="start" id="idl-lp-ZvS"/>
+                        <segue destination="jLu-BW-2Z6" kind="modal" identifier="start" modalTransitionStyle="flipHorizontal" id="MbG-sT-OPJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bPx-6I-Z2Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -162,7 +177,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uEb-M4-cFD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-364" y="-118"/>
+            <point key="canvasLocation" x="-444" y="-809"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
@@ -171,6 +186,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="RRV-SJ-Ttp"/>
+        <segue reference="XBx-HM-N4Z"/>
     </inferredMetricsTieBreakers>
 </document>
